# auth

./: .env  .gitignore  Cargo.toml  docker-compose.yml
lib/: mutant-data.txt
src/: container.rs  create_app.rs  lib.rs  main.rs
src/application/controllers/: user.rs
src/application/dtos/: user.rs
src/domain/: error.rs
src/domain/entities/: confirm.rs  mod.rs  user.rs
src/domain/repositories/: redis.rs  user.rs
src/domain/services/: user.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: mod.rs  redis.rs  user.rs  user_scylla.rs
src/infrastructure/services/: user.rs
